[tool.poetry]
name = "louisamanna-recommend"
version = "0.1.0"
description = "A package for recommending to users based on a collaborative spotify playlist"
authors = ["Jonathan <jhvithamar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spotipy = "^2.23.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.1"
loguru = "^0.7.2"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
